--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="reconnect" href="./fonts.googleapis.com">
 </head>
 
 <body>
@@ -73,7 +74,8 @@
 
                 <li>
                     <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and
+                        minimize
                         risk.</p>
                 </li>
 
