--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="reconnect" href="./fonts.googleapis.com">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href=""> <a href="./portfolio.html">Portfolio</a>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +20,7 @@
     <header>
         <nav>
 
-            <a href="./index.html">WebStudio</a>
+            <a class="link-logo" href="./index.html">WEB<span class="logo-text">STUDIO</span></a>
 
             <ul>
                 <li><a href="">Studio</a></li>
@@ -41,9 +46,9 @@
 
         <!--Main content-->
 
-        <section>
+        <section class="hero-section">
 
-            <h1>Effective Solutions for Your Business</h1>
+            <h1 class="hero-slogan">Effective Solutions for Your Business</h1>
 
             <button type="button">Order Service</button>
 
