--- a/portfolio.html
+++ b/portfolio.html
@@ -41,11 +41,11 @@
 
     <!--Buttons-->
     <ul>
-        <li>All</li>
-        <li>Web Site</li>
-        <li>App</li>
-        <li>Design</li>
-        <li>Markrting</li>
+        <li><button type="button">All</button> </li>
+        </li><button type="button">Web Site</button> </li>
+        </li><button type="button">App</button> </li>
+        <li></li><button type="button">Design</button> </li>
+        <li></li><button type="button">Markrting</button> </li>
     </ul>
 
     <!--Section services-->
