--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="link-logo" href="./index.html">WEB<span class="logo-text">STUDIO</span></a>
 
             <ul>
-                <li><a href="">Studio</a></li>
+                <li><a href="./index.html">Studio</a></li>
                 <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
