--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,12 @@
     <header class="header-main">
         <nav>
 
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html" target="_blank">WebStudio</a>
 
             <ul class="list">
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a class="menu-link" href="./index.html">Studio</a></li>
+                <li><a class="menu-link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="menu-link" href="">Contacts</a></li>
             </ul>
 
         </nav>
@@ -40,6 +40,7 @@
     <!--About section-->
 
     <!--Buttons-->
+    <h1 hidden>Portfolio</h1>
     <ul>
         <li><button type="button">All</button> </li>
         </li><button type="button">Web Site</button> </li>
@@ -49,57 +50,59 @@
     </ul>
 
     <!--Section services-->
+    <h2 hidden>Portfolio</h2>
     <ul>
         <li>
-            <img src="./images/interface.jpg" alt="interface">
+            <img src="./images/interface.jpg" alt="interface" width="360" height="300">
+
             <h2>Banking App Interface Concept</h2>
             <p>App</p>
         </li>
 
         <li>
-            <img src="./images/payment.jpg" alt="payment">
+            <img src="./images/payment.jpg" alt="payment" width="360" height="300">
             <h2>Cashless Payment</h2>
             <p>Marketing</p>
         </li>
 
         <li>
-            <img src="./images/meditation.jpg" alt="meditation">
+            <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
             <h2>Meditation App</h2>
             <p>App</p>
         </li>
 
         <li>
-            <img src="./images/taxi.jpg" alt="taxi">
+            <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">>
             <h2>Taxi Service</h2>
             <p>Marketing</p>
         </li>
 
         <li>
-            <img src="./images/creens.jpg" alt="creens">
+            <img src="./images/creens.jpg" alt="creens" width="360" height="300">>
             <h2>Screen Illustrations</h2>
             <p>Design</p>
         </li>
 
         <li>
-            <img src="./images/courses.jpg" alt="courses">
+            <img src="./images/courses.jpg" alt="courses" width="360" height="300">>
             <h2>Online Courses</h2>
             <p>Marketing</p>
         </li>
 
         <li>
-            <img src="./images/instagram.jpg" alt="instagram">
+            <img src="./images/instagram.jpg" alt="instagram" width="360" height="300">>
             <h2>Instagram Stories Concept</h2>
             <p>Design</p>
         </li>
 
         <li>
-            <img src="./images/organic.jpg" alt="organic">
+            <img src="./images/organic.jpg" alt="organic" width="360" height="300">>
             <h2>Organic Food</h2>
             <p>Web Site</p>
         </li>
 
         <li>
-            <img src="./images/coffee.jpg" alt="coffee">
+            <img src="./images/coffee.jpg" alt="coffee" width="360" height="300">
             <h2>Fresh Coffee</h2>
             <p>Web Site</p>
         </li>
