--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <h1 class="hero-slogan">Effective Solutions for Your Business</h1>
 
-            <button type="button">Order Service</button>
+            <button class="buton-hero" type="button">Order Service</button>
 
         </section>
 
