--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     <header>
         <nav>
 
-            <a class="link-logo" href="./index.html">WEB<span class="logo-text">STUDIO</span></a>
+            <a href="./index.html" class="logo-web">WEB<span class="logo-studio">STUDIO</span></a>
 
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <ul class="list-nav">
+                <li><a href="./index.html" class="link">Studio</a></li>
+                <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
 
         </nav>
 
         <address>
 
-            <ul>
-                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="list-addres">
+                <li> <a href="mailto:info@devstudio.com" class="addres-link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="addres-link">+11 (000) 111-11-11</a></li>
             </ul>
 
         </address>
