--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
             <a href="./index.html" target="_blank">WebStudio</a>
 
-            <ul class="list">
+            <ul class="clas-list">
                 <li><a class="menu-link" href="./index.html">Studio</a></li>
                 <li><a class="menu-link" href="./portfolio.html">Portfolio</a></li>
                 <li><a class="menu-link" href="">Contacts</a></li>
