--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href=""> <a href="./portfolio.html">Portfolio</a>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -22,7 +22,7 @@
 
             <a href="./index.html" class="logo-web">WEB<span class="logo-studio">STUDIO</span></a>
 
-            <ul class="list-nav">
+            <ul class="list-nav list">
                 <li><a href="./index.html" class="link">Studio</a></li>
                 <li><a href="./portfolio.html" class="link">Portfolio</a></li>
                 <li><a href="" class="link">Contacts</a></li>
@@ -32,9 +32,9 @@
 
         <address>
 
-            <ul class="list-addres">
-                <li> <a href="mailto:info@devstudio.com" class="addres-link">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="addres-link">+11 (000) 111-11-11</a></li>
+            <ul class="list-addres list">
+                <li> <a class="addres-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="addres-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
 
         </address>
@@ -59,27 +59,29 @@
 
         <!--Section Feature 1-->
 
-        <section>
+        <section class="section-feature">
 
             <h2 hidden>about advantages</h2>
 
-            <ul>
+            <ul class="menu list">
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <h3 class="lisl-feature">Strategy</h3>
+                    <p class="text-feature">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
 
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="lisl-feature">Punctuality</h3>
+                    <p class="text-feature">Bring the key message to the brand's audience for the best price within the
+                        shortest possible
                         time.
                     </p>
                 </li>
 
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and
+                    <h3 class="lisl-feature"> Diligence</h3>
+                    <p class="text-feature">Research and confirm brands that present the strongest digital growth
+                        opportunities and
                         minimize
                         risk.</p>
                 </li>
@@ -87,8 +89,9 @@
 
 
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="lisl-feature">Technologies</h3>
+                    <p class="text-feature">Design practice focused on digital experiences. We bring forth a deep
+                        passion for
                         problem-solving.</p>
                 </li>
             </ul>
@@ -99,9 +102,9 @@
 
         <section>
 
-            <h2>What are we doing</h2>
+            <h2 class="image-title">What are we doing</h2>
 
-            <ul>
+            <ul class="list-image list">
                 <li><img src="./images/monitor.jpg" alt="monitor" width="360" height="300">
                 </li>
 
@@ -114,32 +117,32 @@
 
         <!--Section Our Team 3-->
 
-        <section>
-            <h2>Our Team</h2>
+        <section class="section-team">
+            <h2 class="team-section-title">Our Team</h2>
 
-            <ul>
+            <ul class="team-list list">
                 <li>
                     <img src="./images/mark.jpg" alt="mark" width="264" height="260">
-                    <h3> Mark Guerrero</h3>
-                    <p> Product Designer</p>
+                    <h3 class="team-title"> Mark Guerrero</h3>
+                    <p class="team-text"> Product Designer</p>
                 </li>
 
                 <li>
                     <img src="./images/tom.jpg" alt="tom" width="264" height="260">
-                    <h3> Tom Ford</h3>
-                    <p> Frontend Developer</p>
+                    <h3 class="team-title"> Tom Ford</h3>
+                    <p class="team-text"> Frontend Developer</p>
                 </li>
 
                 <li>
                     <img src="./images/camila.jpg" alt="camila" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p> Marketing</p>
+                    <h3 class="team-title">Camila Garcia</h3>
+                    <p class="team-text"> Marketing</p>
                 </li>
 
                 <li>
                     <img src="./images/daniel.jpg" alt="daniel" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-title">Daniel Wilson</h3>
+                    <p class="team-text">UI Designer</p>
                 </li>
             </ul>
 
@@ -150,12 +153,13 @@
 
     <!--Footer-->
 
-    <footer>
+    <footer class="footer">
 
 
         <a href="./index.html">WebStudio</a>
 
-        <p> Increase the flow of customers and sales for your business with digital marketing & growth
+        <p class="title-footer"> Increase the flow of customers and sales for your business with digital marketing &
+            growth
             solutions.</p>
 
 
