--- a/portfolio.html
+++ b/portfolio.html
@@ -6,122 +6,131 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-
     <!-- Header-->
-    <header class="header-main">
+    <header>
         <nav>
 
-            <a href="./index.html" target="_blank">WebStudio</a>
+            <a href="./index.html" class="logo-web">WEB<span class="logo-studio">STUDIO</span></a>
 
-            <ul class="clas-list">
-                <li><a class="menu-link" href="./index.html">Studio</a></li>
-                <li><a class="menu-link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="menu-link" href="">Contacts</a></li>
+            <ul class="list-nav list">
+                <li><a href="./index.html" class="link">Studio</a></li>
+                <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
 
         </nav>
 
         <address>
 
-            <ul>
-                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="list-addres list">
+                <li> <a class="addres-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="addres-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
 
         </address>
 
     </header>
 
+
     <!--About section-->
 
     <!--Buttons-->
     <h1 hidden>Portfolio</h1>
-    <ul>
-        <li><button type="button">All</button> </li>
-        </li><button type="button">Web Site</button> </li>
-        </li><button type="button">App</button> </li>
-        <li></li><button type="button">Design</button> </li>
-        <li></li><button type="button">Markrting</button> </li>
+    <ul class="list-buton list">
+        <li> <button class="buton-all" type="button">All</buton>
+        </li>
+        </li><button class="about-buton" type="button">Web Site</button> </li>
+        </li><button class="about-buton" type="button">App</button> </li>
+        <li></li><button class="about-buton" type="button">Design</button> </li>
+        <li></li><button class="about-buton" type="button">Marketing</button> </li>
     </ul>
 
     <!--Section services-->
     <h2 hidden>Portfolio</h2>
-    <ul>
+    <ul class="list">
         <li>
             <img src="./images/interface.jpg" alt="interface" width="360" height="300">
 
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
+            <h2 class="title-portfolio">Banking App Interface Concept</h2>
+            <p class="text-portfolio">App</p>
         </li>
 
         <li>
             <img src="./images/payment.jpg" alt="payment" width="360" height="300">
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
+            <h2 class="title-portfolio">Cashless Payment</h2>
+            <p class="text-portfolio">Marketing</p>
         </li>
 
         <li>
             <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
-            <h2>Meditation App</h2>
-            <p>App</p>
+            <h2 class="title-portfolio">Meditation App</h2>
+            <p class="text-portfolio">App</p>
         </li>
 
         <li>
             <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">>
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
+            <h2 class="title-portfolio">Taxi Service</h2>
+            <p class="text-portfolio">Marketing</p>
         </li>
 
         <li>
-            <img src="./images/creens.jpg" alt="creens" width="360" height="300">>
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
+            <img src="./images/screen.jpg" alt="creens" width="360" height="300">>
+            <h2 class="title-portfolio">Screen Illustrations</h2>
+            <p class="text-portfolio">Design</p>
         </li>
 
         <li>
             <img src="./images/courses.jpg" alt="courses" width="360" height="300">>
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
+            <h2 class="title-portfolio">Online Courses</h2>
+            <p class="text-portfolio">Marketing</p>
         </li>
 
         <li>
             <img src="./images/instagram.jpg" alt="instagram" width="360" height="300">>
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
+            <h2 class="title-portfolio">Instagram Stories Concept</h2>
+            <p class="text-portfolio">Design</p>
         </li>
 
         <li>
             <img src="./images/organic.jpg" alt="organic" width="360" height="300">>
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+            <h2 class="title-portfolio">Organic Food</h2>
+            <p class="text-portfolio">Web Site</p>
         </li>
 
         <li>
             <img src="./images/coffee.jpg" alt="coffee" width="360" height="300">
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
+            <h2 class="title-portfolio">Fresh Coffee</h2>
+            <p class="text-portfolio">Web Site</p>
         </li>
 
     </ul>
 
 
     <!--Footer-->
-    <footer>
+
+    <footer class="footer">
 
 
         <a href="./index.html">WebStudio</a>
 
-        <p> Increase the flow of customers and sales for your business with digital marketing & growth
+        <p class="title-footer"> Increase the flow of customers and sales for your business with digital marketing &
+            growth
             solutions.</p>
 
 
 
     </footer>
+
 
 </body>
 
