--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
@@ -20,7 +20,8 @@
     <header>
         <nav>
 
-            <a href="./index.html" class="logo-web">WEB<span class="logo-studio">STUDIO</span></a>
+            <a href="./index.html" class="logo-web">Web<span class="logo-studio">Studio</span></a>
+
 
             <ul class="list-nav list">
                 <li><a href="./index.html" class="link">Studio</a></li>
@@ -156,7 +157,7 @@
     <footer class="footer">
 
 
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="web-footer"> Web<span class="studio-footer">Studio</span></a>
 
         <p class="title-footer"> Increase the flow of customers and sales for your business with digital marketing &
             growth
