--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
 
-            <a href="./index.html" class="logo-web">Web<span class="logo-studio">Studio</span></a>
+            <a href="./index.html" class="logo-web link">Web<span class="logo-studio">Studio</span></a>
 
 
             <ul class="list-nav list">
@@ -157,7 +157,7 @@
     <footer class="footer">
 
 
-        <a href="./index.html" class="web-footer"> Web<span class="studio-footer">Studio</span></a>
+        <a href="./index.html" class="web-footer link"> Web<span class="studio-footer">Studio</span></a>
 
         <p class="title-footer"> Increase the flow of customers and sales for your business with digital marketing &
             growth
