--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 
             <ul class="list-nav list">
-                <li><a href="./index.html" class="link">Studio</a></li>
-                <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-                <li><a href="" class="link">Contacts</a></li>
+                <li><a href="./index.html" class="link mag">Studio</a></li>
+                <li><a href="./portfolio.html" class="link mag">Portfolio</a></li>
+                <li><a href="" class="link mag">Contacts</a></li>
             </ul>
 
         </nav>
@@ -51,7 +51,7 @@
 
             <h1 class="hero-slogan">Effective Solutions for Your Business</h1>
 
-            <button class="buton-hero" type="button">Order Service</button>
+            <button class="buton-hero " type="button">Order Service</button>
 
         </section>
 
