--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <section class="section-feature">
 
-            <h2 hidden>about advantages</h2>
+            <h2 hidden class="image-title">about advantages</h2>
 
             <ul class="menu list">
                 <li>
@@ -121,8 +121,8 @@
         <section class="section-team">
             <h2 class="team-section-title">Our Team</h2>
 
-            <ul class="team-list list">
-                <li>
+            <ul>
+                <li class="team-list list">
                     <img src="./images/mark.jpg" alt="mark" width="264" height="260">
                     <h3 class="team-title"> Mark Guerrero</h3>
                     <p class="team-text"> Product Designer</p>
