--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             <li></li><button class="about-buton" type="button">Marketing</button> </li>
         </ul>
 
-        <!--Section services-->
+        <!-- Services-->
         <h2 hidden>Portfolio</h2>
         <ul class="list">
             <li>
