--- a/portfolio.html
+++ b/portfolio.html
@@ -42,79 +42,80 @@
 
     </header>
     <main>
+        <section>
+            <!--About section-->
 
-        <!--About section-->
+            <!--Buttons-->
+            <h1 hidden>Portfolio</h1>
+            <ul class="list-buton list">
+                <li> <button class="buton-all" type="button">All</buton>
+                </li>
+                </li><button class="about-buton" type="button">Web Site</button> </li>
+                </li><button class="about-buton" type="button">App</button> </li>
+                <li></li><button class="about-buton" type="button">Design</button> </li>
+                <li></li><button class="about-buton" type="button">Marketing</button> </li>
+            </ul>
 
-        <!--Buttons-->
-        <h1 hidden>Portfolio</h1>
-        <ul class="list-buton list">
-            <li> <button class="buton-all" type="button">All</buton>
-            </li>
-            </li><button class="about-buton" type="button">Web Site</button> </li>
-            </li><button class="about-buton" type="button">App</button> </li>
-            <li></li><button class="about-buton" type="button">Design</button> </li>
-            <li></li><button class="about-buton" type="button">Marketing</button> </li>
-        </ul>
+            <!-- Services-->
+            <h2 hidden>Portfolio</h2>
+            <ul class="list">
+                <li>
+                    <img src="./images/interface.jpg" alt="interface" width="360" height="300">
 
-        <!-- Services-->
-        <h2 hidden>Portfolio</h2>
-        <ul class="list">
-            <li>
-                <img src="./images/interface.jpg" alt="interface" width="360" height="300">
+                    <h2 class="title-portfolio">Banking App Interface Concept</h2>
+                    <p class="text-portfolio">App</p>
+                </li>
 
-                <h2 class="title-portfolio">Banking App Interface Concept</h2>
-                <p class="text-portfolio">App</p>
-            </li>
+                <li>
+                    <img src="./images/payment.jpg" alt="payment" width="360" height="300">
+                    <h2 class="title-portfolio">Cashless Payment</h2>
+                    <p class="text-portfolio">Marketing</p>
+                </li>
 
-            <li>
-                <img src="./images/payment.jpg" alt="payment" width="360" height="300">
-                <h2 class="title-portfolio">Cashless Payment</h2>
-                <p class="text-portfolio">Marketing</p>
-            </li>
+                <li>
+                    <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
+                    <h2 class="title-portfolio">Meditation App</h2>
+                    <p class="text-portfolio">App</p>
+                </li>
 
-            <li>
-                <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
-                <h2 class="title-portfolio">Meditation App</h2>
-                <p class="text-portfolio">App</p>
-            </li>
+                <li>
+                    <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">>
+                    <h2 class="title-portfolio">Taxi Service</h2>
+                    <p class="text-portfolio">Marketing</p>
+                </li>
 
-            <li>
-                <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">>
-                <h2 class="title-portfolio">Taxi Service</h2>
-                <p class="text-portfolio">Marketing</p>
-            </li>
+                <li>
+                    <img src="./images/screen.jpg" alt="creens" width="360" height="300">>
+                    <h2 class="title-portfolio">Screen Illustrations</h2>
+                    <p class="text-portfolio">Design</p>
+                </li>
 
-            <li>
-                <img src="./images/screen.jpg" alt="creens" width="360" height="300">>
-                <h2 class="title-portfolio">Screen Illustrations</h2>
-                <p class="text-portfolio">Design</p>
-            </li>
+                <li>
+                    <img src="./images/courses.jpg" alt="courses" width="360" height="300">>
+                    <h2 class="title-portfolio">Online Courses</h2>
+                    <p class="text-portfolio">Marketing</p>
+                </li>
 
-            <li>
-                <img src="./images/courses.jpg" alt="courses" width="360" height="300">>
-                <h2 class="title-portfolio">Online Courses</h2>
-                <p class="text-portfolio">Marketing</p>
-            </li>
+                <li>
+                    <img src="./images/instagram.jpg" alt="instagram" width="360" height="300">>
+                    <h2 class="title-portfolio">Instagram Stories Concept</h2>
+                    <p class="text-portfolio">Design</p>
+                </li>
 
-            <li>
-                <img src="./images/instagram.jpg" alt="instagram" width="360" height="300">>
-                <h2 class="title-portfolio">Instagram Stories Concept</h2>
-                <p class="text-portfolio">Design</p>
-            </li>
+                <li>
+                    <img src="./images/organic.jpg" alt="organic" width="360" height="300">>
+                    <h2 class="title-portfolio">Organic Food</h2>
+                    <p class="text-portfolio">Web Site</p>
+                </li>
 
-            <li>
-                <img src="./images/organic.jpg" alt="organic" width="360" height="300">>
-                <h2 class="title-portfolio">Organic Food</h2>
-                <p class="text-portfolio">Web Site</p>
-            </li>
+                <li>
+                    <img src="./images/coffee.jpg" alt="coffee" width="360" height="300">
+                    <h2 class="title-portfolio">Fresh Coffee</h2>
+                    <p class="text-portfolio">Web Site</p>
+                </li>
 
-            <li>
-                <img src="./images/coffee.jpg" alt="coffee" width="360" height="300">
-                <h2 class="title-portfolio">Fresh Coffee</h2>
-                <p class="text-portfolio">Web Site</p>
-            </li>
-
-        </ul>
+            </ul>
+        </section>
     </main>
 
 
