--- a/portfolio.html
+++ b/portfolio.html
@@ -60,16 +60,19 @@
             <h2 hidden>Portfolio</h2>
             <ul class="list">
                 <li>
-                    <img src="./images/interface.jpg" alt="interface" width="360" height="300">
+                    <a class="link" href="">
+                        <img src="./images/interface.jpg" alt="interface" width="360" height="300">
 
-                    <h2 class="title-portfolio">Banking App Interface Concept</h2>
-                    <p class="text-portfolio">App</p>
+                        <h2 class="title-portfolio">Banking App Interface Concept</h2>
+                        <p class="text-portfolio">App</p>
                 </li>
-
+                </a>
                 <li>
-                    <img src="./images/payment.jpg" alt="payment" width="360" height="300">
-                    <h2 class="title-portfolio">Cashless Payment</h2>
-                    <p class="text-portfolio">Marketing</p>
+                    <a href="">
+                        <img src="./images/payment.jpg" alt="payment" width="360" height="300">
+                        <h2 class="title-portfolio">Cashless Payment</h2>
+                        <p class="text-portfolio">Marketing</p>
+                    </a>
                 </li>
 
                 <li>
