--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                 </li>
                 </a>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/payment.jpg" alt="payment" width="360" height="300">
                         <h2 class="title-portfolio">Cashless Payment</h2>
                         <p class="text-portfolio">Marketing</p>
@@ -76,45 +76,59 @@
                 </li>
 
                 <li>
-                    <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
-                    <h2 class="title-portfolio">Meditation App</h2>
-                    <p class="text-portfolio">App</p>
+                    <a class="link" href="">
+                        <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
+                        <h2 class="title-portfolio">Meditation App</h2>
+                        <p class="text-portfolio">App</p>
+                    </a>
                 </li>
 
                 <li>
-                    <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">>
-                    <h2 class="title-portfolio">Taxi Service</h2>
-                    <p class="text-portfolio">Marketing</p>
+                    <a class="link" href="">
+                        <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">>
+                        <h2 class="title-portfolio">Taxi Service</h2>
+                        <p class="text-portfolio">Marketing</p>
+                    </a>
                 </li>
 
                 <li>
-                    <img src="./images/screen.jpg" alt="creens" width="360" height="300">>
-                    <h2 class="title-portfolio">Screen Illustrations</h2>
-                    <p class="text-portfolio">Design</p>
+                    <a class="link" href="">
+                        <img src="./images/screen.jpg" alt="creens" width="360" height="300">>
+                        <h2 class="title-portfolio">Screen Illustrations</h2>
+                        <p class="text-portfolio">Design</p>
+                    </a>
                 </li>
 
                 <li>
-                    <img src="./images/courses.jpg" alt="courses" width="360" height="300">>
-                    <h2 class="title-portfolio">Online Courses</h2>
-                    <p class="text-portfolio">Marketing</p>
+                    <a class="link" href="">
+                        <img src="./images/courses.jpg" alt="courses" width="360" height="300">>
+                        <h2 class="title-portfolio">Online Courses</h2>
+                        <p class="text-portfolio">Marketing</p>
+                    </a>
                 </li>
 
                 <li>
-                    <img src="./images/instagram.jpg" alt="instagram" width="360" height="300">>
-                    <h2 class="title-portfolio">Instagram Stories Concept</h2>
-                    <p class="text-portfolio">Design</p>
+                    <a class="link" href="">
+                        <img src="./images/instagram.jpg" alt="instagram" width="360" height="300">>
+                        <h2 class="title-portfolio">Instagram Stories Concept</h2>
+                        <p class="text-portfolio">Design</p>
+                    </a>
                 </li>
 
                 <li>
-                    <img src="./images/organic.jpg" alt="organic" width="360" height="300">>
-                    <h2 class="title-portfolio">Organic Food</h2>
-                    <p class="text-portfolio">Web Site</p>
+                    <a class="link" href="">
+                        <img src="./images/organic.jpg" alt="organic" width="360" height="300">>
+                        <h2 class="title-portfolio">Organic Food</h2>
+                        <p class="text-portfolio">Web Site</p>
+                    </a>
                 </li>
 
                 <li>
-                    <img src="./images/coffee.jpg" alt="coffee" width="360" height="300">
-                    <h2 class="title-portfolio">Fresh Coffee</h2>
-                    <p class="text-portfolio">Web Site</p>
+                    <a class="link" href="">
+                        <img src="./images/coffee.jpg" alt="coffee" width="360" height="300">
+                        <h2 class="title-portfolio">Fresh Coffee</h2>
+                        <p class="text-portfolio">Web Site</p>
+                    </a>
                 </li>
 
             </ul>
