--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
         <section class="section-team">
             <h2 class="team-section-title">Our Team</h2>
 
-            <ul>
-                <li class="team-list list">
+            <ul class="list">
+                <li class="team-list">
                     <img src="./images/mark.jpg" alt="mark" width="264" height="260">
                     <h3 class="team-title"> Mark Guerrero</h3>
                     <p class="team-text"> Product Designer</p>
