--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 
         </nav>
 
-        <address>
+        <address class="addres">
 
             <ul class="list-addres list">
                 <li> <a class="addres-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
