--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
                     <p class="team-text"> Product Designer</p>
                 </li>
 
-                <li>
+                <li class="team-list">
                     <img src="./images/tom.jpg" alt="tom" width="264" height="260">
                     <h3 class="team-title"> Tom Ford</h3>
                     <p class="team-text"> Frontend Developer</p>
                 </li>
 
-                <li>
+                <li class="team-list">
                     <img src="./images/camila.jpg" alt="camila" width="264" height="260">
                     <h3 class="team-title">Camila Garcia</h3>
                     <p class="team-text"> Marketing</p>
                 </li>
 
-                <li>
+                <li class="team-list">
                     <img src="./images/daniel.jpg" alt="daniel" width="264" height="260">
                     <h3 class="team-title">Daniel Wilson</h3>
                     <p class="team-text">UI Designer</p>
