--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
         <address class="addres">
 
             <ul class="list-addres list">
-                <li> <a class="addres-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="addres-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li> <a href="mailto:info@devstudio.com" class="addres-link link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="addres-link link">+11 (000) 111-11-11</a></li>
             </ul>
 
         </address>
