--- a/portfolio.html
+++ b/portfolio.html
@@ -50,10 +50,10 @@
             <ul class="list-buton list">
                 <li> <button class="buton-all" type="button">All</buton>
                 </li>
-                </li><button class="about-buton" type="button">Web Site</button> </li>
-                </li><button class="about-buton" type="button">App</button> </li>
-                <li></li><button class="about-buton" type="button">Design</button> </li>
-                <li></li><button class="about-buton" type="button">Marketing</button> </li>
+                <li><button class="about-buton" type="button">Web Site</button> </li>
+                <li><button class="about-buton" type="button">App</button> </li>
+                <li><button class="about-buton" type="button">Design</button> </li>
+                <li><button class="about-buton" type="button">Marketing</button> </li>
             </ul>
 
             <!-- Services-->
